# ibob.github.com

./: .gitignore  .gitmodules  404.html  CNAME  Gemfile  LICENSE.txt  README.md  _config.yml  about.md  articles.md  blog.md  index.html  index.md  projects.md  site.webmanifest  talks.md
_data/: projects-non-soft.yml  projects.yml  talks.yml
_drafts/: cmake-fetch-content.md  coro-throw.md  cpp-the-bad-parts.md  dont-use-shared_ptr-aliasing-ctor.md  how-vs-became-unusuable-to-me.md  libcpp-and-libstdcpp-bug-immutable-objects.md  msvc-allows-moving-from-const.md  next.md  pure-randomness.md  setting-up-a-workstation-on-android.md  testing-build-failure-with-cmake.md  the-case-for-optional-ref-and-void.md  tracking-shared-ptr-leaks.md  use_transparent_lookups.md  yet-another-fix-of-cpp-return-xval.md
_includes/: blog-nav.html  comments.html  footer.html  header.html  list-posts.html  main-nav-ul.html  my-social.html  noss.html  project-list.md  read-time.html  stars-post-footer.md  talk-list.md  top.html
_layouts/: base.html  blog-home.html  home.html  page.html  post.html  site-base.html
_plugins/: silly_test.rb
_posts/: 2012-01-18-hello-world.md  2012-01-19-using-web-icons.md  2012-02-10-code-snippets.md  2012-03-15-guest-blogs.md  2018-02-25-post-zero.md  2018-07-03-compiler-generated-move.md  2018-08-18-a-bug-in-the-cpp-standard.md  2018-11-15-project-stars.md  2018-11-16-stars-mini3d.md  2018-11-17-stars-nim-lang.md  2018-11-18-stars-dear-imgui.md  2018-11-19-stars-sdsl-lite.md  2018-11-20-stars-android-native-egl-example.md  2018-11-21-pprb.md  2018-11-22-stars-reveal-js.md  2018-11-22-stop-teaching-cpp.md  2018-11-23-stars-json11.md  2018-11-24-stars-cotire.md  2018-11-25-stars-open-souce-games.md  2018-11-26-stars-glsl-parser.md  2018-11-27-stars-minifb.md  2018-11-28-stars-quine-relay.md  2018-11-29-stars-rang.md  2018-12-02-stars-libui.md  (+22 more)
slides/cpu-friendly-code-2-bg/demo/: CMakeLists.txt  common.inl  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  demo6.cpp
slides/emscripten_js/demo/HelloWorld/: .gitignore  CMakeLists.txt  HelloJSTalks.cpp  emscripten.toolchain.cmake  gen_emcc_win_debug.bat  gen_makefile_debug.sh  gen_vs12.bat
(+178 files in other folders)
